gccida/c3/store_constructor
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4856:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // r10 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4867:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4870:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4871:5: error: expected ';' after expression
tree initial; // rcx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4871:6: error: use of undeclared identifier 'initial'
tree initial; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4872:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4873:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4874:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4880:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4881:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4882:5: error: expected ';' after expression
tree v35; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4882:6: error: use of undeclared identifier 'v35'
tree v35; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4883:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/expr.c:4884:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor/src/obj/expr.o] Error 1
